--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,35 +1,88 @@
-.signup {
-  max-width: 400px;
-  margin: 80px auto;
-  padding: 30px;
-  border-radius: 8px;
-  background-color: #a4ced3;
-  color: white;
-  box-shadow: 0 0 10px rgba(97, 190, 115, 0.3);
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-form {
+body {
+  background: linear-gradient(to right, #fbeec1, #d5b895);
+  height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-input {
-  padding: 10px;
+.signup {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+}
+
+.box {
+  max-width: 400px;
+  /* background-color: #fff8f0; */
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 12px;
+  padding: 30px;
+  box-shadow: 0 8px 20px rgba(111, 78, 55, 0.2);
+  border: 2px solid #a47551;
+  
+}
+
+ h1 {
+  text-align: center;
+  color: #6f4e37;
+  margin-bottom: 10px;
+}
+
+
+
+ input {
+  width: 100%;
+  padding: 12px;
   margin-bottom: 15px;
-  border: none;
-  border-radius:5px;
+  border: 1px solid #caa472;
+  border-radius: 6px;
+  background-color: #fffdf8;
+  font-size: 14px;
+  opacity: 0.5;
 }
 
- button {
-  padding: 10px;
-  background-color: #a4b9a4;
+button {
+  width: 100%;
+  padding: 12px;
+  background-color: #a47551;
   color: white;
-  font-weight: bold;
+  font-size: 16px;
   border: none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #6f4e37;
+}
+.background-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.6;
+  z-index: -1;
+}
+
+@media (max-width: 400px) {
+  box {
+    padding: 20px;
+  }
+
+  input,
+  button {
+    font-size: 14px;
+    padding: 10px;
+  }
 }
