--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -13,10 +13,13 @@
   align-items: center;
 } */
 
-.login{
-  width: 100%;
-  padding: 20px;
+.login {
+  flex: 1; /* Navbar ke niche bacha hua space lega */
   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  
 }
 
 .box {
@@ -25,8 +28,9 @@
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 12px;
   padding: 30px;
-  box-shadow: 0 8px 20px rgba(111, 78, 55, 0.2);
+  /* box-shadow: 0 8px 20px rgba(111, 78, 55, 0.2); */
   border: 2px solid #a47551;
+ 
   
 }
 
