--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -5,18 +5,19 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   background: linear-gradient(to right, #fbeec1, #d5b895);
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .signup {
   width: 100%;
   padding: 20px;
   display: flex;
+  justify-content: center;
 }
 
 .box {
@@ -73,7 +74,7 @@ button:hover {
   height: 100%;
   object-fit: cover;
   opacity: 0.6;
-  z-index: -1;
+  z-index: -1
 }
 
 @media (max-width: 400px) {
